--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -1,19 +1,19 @@
-import { Meta } from '@storybook/blocks';
-import Image from 'next/image';
+import { Meta } from '@storybook/blocks'
+import Image from 'next/image'
 
-import Code from './assets/code-brackets.svg';
-import Colors from './assets/colors.svg';
-import Comments from './assets/comments.svg';
-import Direction from './assets/direction.svg';
-import Flow from './assets/flow.svg';
-import Plugin from './assets/plugin.svg';
-import Repo from './assets/repo.svg';
-import StackAlt from './assets/stackalt.svg';
+import Code from './assets/code-brackets.svg'
+import Colors from './assets/colors.svg'
+import Comments from './assets/comments.svg'
+import Direction from './assets/direction.svg'
+import Flow from './assets/flow.svg'
+import Plugin from './assets/plugin.svg'
+import Repo from './assets/repo.svg'
+import StackAlt from './assets/stackalt.svg'
 
-<Meta title="Example/Introduction" />
+<Meta title='Example/Introduction' />
 
 <style>
-  {`
+	{`
     .subheading {
       --mediumdark: '#999999';
       font-weight: 700;
@@ -127,104 +127,113 @@ Browse example stories now by navigating to them in the sidebar.
 View their code in the `stories` directory to learn how they work.
 We recommend building UIs with a [**component-driven**](https://componentdriven.org) process starting with atomic components and ending with pages.
 
-<div className="subheading">Configure</div>
+<div className='subheading'>Configure</div>
 
-<div className="link-list">
-  <a
-    className="link-item"
-    href="https://storybook.js.org/docs/react/addons/addon-types"
-    target="_blank"
-  >
-    <div className="link-item-img-wrapper">
-      <Image src={Plugin} alt="plugin" />
-    </div>
-    <span>
-      <strong>Presets for popular tools</strong>
-      Easy setup for TypeScript, SCSS and more.
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="https://storybook.js.org/docs/react/configure/webpack"
-    target="_blank"
-  >
-    <div className="link-item-img-wrapper">
-      <Image src={StackAlt} alt="Build" />
-    </div>
-    <span>
-      <strong>Build configuration</strong>
-      How to customize webpack and Babel
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="https://storybook.js.org/docs/react/configure/styling-and-css"
-    target="_blank"
-  >
-    <div className="link-item-img-wrapper">
-      <Image src={Colors} alt="colors" />
-    </div>
-    <span>
-      <strong>Styling</strong>
-      How to load and configure CSS libraries
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="https://storybook.js.org/docs/react/get-started/setup#configure-storybook-for-your-stack"
-    target="_blank"
-  >
-    <div className="link-item-img-wrapper">
-      <Image src={Flow} alt="flow" />
-    </div>
-    <span>
-      <strong>Data</strong>
-      Providers and mocking for data libraries
-    </span>
-  </a>
+<div className='link-list'>
+	<a
+		className='link-item'
+		href='https://storybook.js.org/docs/react/addons/addon-types'
+		target='_blank'
+	>
+		<div className='link-item-img-wrapper'>
+			<Image src={Plugin} alt='plugin' />
+		</div>
+		<span>
+			<strong>Presets for popular tools</strong>
+			Easy setup for TypeScript, SCSS and more.
+		</span>
+	</a>
+	<a
+		className='link-item'
+		href='https://storybook.js.org/docs/react/configure/webpack'
+		target='_blank'
+	>
+		<div className='link-item-img-wrapper'>
+			<Image src={StackAlt} alt='Build' />
+		</div>
+		<span>
+			<strong>Build configuration</strong>
+			How to customize webpack and Babel
+		</span>
+	</a>
+	<a
+		className='link-item'
+		href='https://storybook.js.org/docs/react/configure/styling-and-css'
+		target='_blank'
+	>
+		<div className='link-item-img-wrapper'>
+			<Image src={Colors} alt='colors' />
+		</div>
+		<span>
+			<strong>Styling</strong>
+			How to load and configure CSS libraries
+		</span>
+	</a>
+	<a
+		className='link-item'
+		href='https://storybook.js.org/docs/react/get-started/setup#configure-storybook-for-your-stack'
+		target='_blank'
+	>
+		<div className='link-item-img-wrapper'>
+			<Image src={Flow} alt='flow' />
+		</div>
+		<span>
+			<strong>Data</strong>
+			Providers and mocking for data libraries
+		</span>
+	</a>
 </div>
 
-<div className="subheading">Learn</div>
+<div className='subheading'>Learn</div>
 
-<div className="link-list">
-  <a className="link-item" href="https://storybook.js.org/docs" target="_blank">
-    <div className="link-item-img-wrapper">
-      <Image src={Repo} alt="repo" />
-    </div>
-    <span>
-      <strong>Storybook documentation</strong>
-      Configure, customize, and extend
-    </span>
-  </a>
-  <a className="link-item" href="https://storybook.js.org/tutorials/" target="_blank">
-    <div className="link-item-img-wrapper">
-      <Image src={Direction} alt="direction" />
-    </div>
-    <span>
-      <strong>In-depth guides</strong>
-      Best practices from leading teams
-    </span>
-  </a>
-  <a className="link-item" href="https://github.com/storybookjs/storybook" target="_blank">
-    <div className="link-item-img-wrapper">
-      <Image src={Code} alt="code" />
-    </div>
-    <span>
-      <strong>GitHub project</strong>
-      View the source and add issues
-    </span>
-  </a>
-  <a className="link-item" href="https://discord.gg/storybook" target="_blank">
-    <div className="link-item-img-wrapper">
-      <Image src={Comments} alt="comments" />
-    </div>
-    <span>
-      <strong>Discord chat</strong>
-      Chat with maintainers and the community
-    </span>
-  </a>
+<div className='link-list'>
+	<a className='link-item' href='https://storybook.js.org/docs' target='_blank'>
+		<div className='link-item-img-wrapper'>
+			<Image src={Repo} alt='repo' />
+		</div>
+		<span>
+			<strong>Storybook documentation</strong>
+			Configure, customize, and extend
+		</span>
+	</a>
+	<a
+		className='link-item'
+		href='https://storybook.js.org/tutorials/'
+		target='_blank'
+	>
+		<div className='link-item-img-wrapper'>
+			<Image src={Direction} alt='direction' />
+		</div>
+		<span>
+			<strong>In-depth guides</strong>
+			Best practices from leading teams
+		</span>
+	</a>
+	<a
+		className='link-item'
+		href='https://github.com/storybookjs/storybook'
+		target='_blank'
+	>
+		<div className='link-item-img-wrapper'>
+			<Image src={Code} alt='code' />
+		</div>
+		<span>
+			<strong>GitHub project</strong>
+			View the source and add issues
+		</span>
+	</a>
+	<a className='link-item' href='https://discord.gg/storybook' target='_blank'>
+		<div className='link-item-img-wrapper'>
+			<Image src={Comments} alt='comments' />
+		</div>
+		<span>
+			<strong>Discord chat</strong>
+			Chat with maintainers and the community
+		</span>
+	</a>
 </div>
 
-<div className="tip-wrapper">
-  <span className="tip">Tip</span>Edit the Markdown in <code>stories/Introduction.mdx</code>
+<div className='tip-wrapper'>
+	<span className='tip'>Tip</span>Edit the Markdown in{' '}
+	<code>stories/Introduction.mdx</code>
 </div>
