--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -1,4 +1,4 @@
-import { Meta } from '@storybook/addon-docs/blocks';
+import { Meta } from '@storybook/blocks';
 import Image from 'next/image';
 
 import Code from './assets/code-brackets.svg';
